added input fields, buttons, and styling; added input validation, error messages for invalid input

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_lints: ^2.0.0
+  flutter_svg: ^0.22.0
+
 
 dev_dependencies:
   flutter_test:
@@ -45,7 +48,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -62,6 +65,10 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+  - assets/images/icons/
+  - assets/logo/
+  - assets/images/vectors/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -74,6 +81,18 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  fonts:
+  - family: Lexend
+    fonts:
+      - asset: assets/fonts/Lexend/static/Lexend-Black.ttf
+      - asset: assets/fonts/Lexend/static/Lexend-Bold.ttf
+      - asset: assets/fonts/Lexend/static/Lexend-ExtraBold.ttf
+      - asset: assets/fonts/Lexend/static/Lexend-ExtraLight.ttf
+      - asset: assets/fonts/Lexend/static/Lexend-Light.ttf
+      - asset: assets/fonts/Lexend/static/Lexend-Medium.ttf
+      - asset: assets/fonts/Lexend/static/Lexend-Regular.ttf
+      - asset: assets/fonts/Lexend/static/Lexend-SemiBold.ttf
+      - asset: assets/fonts/Lexend/static/Lexend-Thin.ttf
   # fonts:
   #   - family: Schyler
   #     fonts:
