--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   flutter_lints: ^2.0.0
   flutter_svg: ^0.22.0
   carousel_slider: ^4.0.0
+  intl: ^0.17.0
+
 
 
 
@@ -72,6 +74,10 @@ flutter:
   - assets/logo/
   - assets/images/vectors/
   - assets/images/banners/slider_banners/
+  - assets/images/products/coffee/
+  - assets/images/banners/product_banners/
+  - assets/images/banners/sale_off_banners/
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
