Multiple images and prices
Add product description. Each product can have multiple images and multiple sizes with different prices

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,7 @@ flutter:
   - assets/images/vectors/
   - assets/images/banners/slider_banners/
   - assets/images/products/coffee/
+  - assets/images/products/tea/
   - assets/images/banners/product_banners/
   - assets/images/banners/sale_off_banners/
 
