--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   provider: ^6.1.1
   geolocator: ^10.1.0
   url_launcher: ^6.2.4
+  geocoding: ^2.1.1
 
   # shared_preferences: ^2.0.15
   # path_provider: ^2.0.10
