--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   geolocator: ^10.1.0
   url_launcher: ^6.2.4
   geocoding: ^2.1.1
+  http: ^1.2.0
 
   # shared_preferences: ^2.0.15
   # path_provider: ^2.0.10
